# old

./: .cproject  .gitignore  .project  .tm_project.cache  AUTHORS  COPYING  INSTALL  Makefile  Makefile.am  Makefile.am~  Makefile.in  README  README.md  TODO  acinclude.m4  aclocal.m4  bibledit.prj  bibledit.prj.bak  bibledit.pws  bumpversion.cpp  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  geany  log  shared_dictionary  use-firefox
bibleditgtk/dbus/: Makefile.am  Makefile.in  bibledit-dbus.cpp
bibletime/: Makefile.am  Makefile.in  aclocal.m4  bibledit-bibletime.1  bibledit-bibletime.cpp  bibledit-bibletime.desktop  bibledit-bibletime.h  bibledit-bibletime.xpm  config.h  config.h.in  configure  configure.ac  gtkbuilder.xml
bibletime/man/: Makefile.am  Makefile.in  bibledit-bibletime.1
bibleworks/: BW800_TLB.dcr  BW800_TLB.dcu  BW800_TLB.pas  ChangeLog  Makefile.am  Makefile.in  TODO  aclocal.m4  bibledit-bibleworks.nsi  bibledit-bibleworks.xpm  bibleditbibleworks.dcu  bibleditbibleworks.dpk  bibleditbibleworks.dpr  bibleditbibleworks.dproj  bibleditbibleworks.dproj.local  bibleditbibleworks.identcache  books.dcu  books.pas  config.h  configure  configure.ac  main.dcu  main.dfm  main.pas  pollthread.dcu  pollthread.pas  utilities.dcu
browser/: Makefile  Makefile.am  Makefile.in  bibledit-help.cpp  bibledit-help.h
doc/: 33_asus_eee.html  33_fc7.html  33_mandriva_free_2008_spring.html  33_olpc656.html  33_opensuse110.html  33_osx10.4.html  34_ubuntu8.10.html  35_fc10.html  35_ubuntu8.04.html  35_ubuntu8.10.html  36_debian50.html  36_ubuntu9.01.html  37_opensuse111.html  38_ubuntu9.04.html  39_debian502.html  39_fc11.html  39_ubuntu9.04.html  40_debian503.html  40_fc12.html  40_opensuse112.html  40_osx10.4.html  40_ubuntu9.10.html  41_ubuntu9.10.html  Makefile  Makefile.am  Makefile.in  about.html  accelerators.html  allpages  allpages.cpp  allpages.html  areas.html  asus_eee_pc.html  backup.html  bart.html  bibledit.css  bibledit_debian.html  bibledit_ubuntu.html  biblenotes.html  bibletime.html  (+244 more)
doc/.deps/: allpages.Po  contents.Po  generalconfig.Po  projectconfig.Po
doc/site/: 4-management.html  6-community.html  8-about.html  home.html  index.html  installation.html  reference.html  resources.html  tutorials.html
gtk/: .gitignore  ChangeLog  Makefile.am  Makefile.in  README  README.md  THANKS  TODO  aclocal.m4  autogen.sh  config.h  config.h.in  configure  configure.ac  missing
gtk/desktop/: Makefile.in  bibledit-gtk.desktop
gtk/doc/: Makefile.am  Makefile.in  README  index.html  license  menus.pl  retrieval.pl  site.xml
gtk/eeepc/: Makefile.am  Makefile.in
gtk/git/: Makefile.am  Makefile.in  bibledit-git  bibledit-git.cpp  bibledit-git.h
gtk/gobible/: Makefile.am  Makefile.in  README
gtk/kjv/: Makefile.in
gtk/linux/: DEBUGGING.txt  buildenvLinux.sh  objdump-recursive.pl
gtk/man/: Makefile.in  bibledit-dbus.1  bibledit-git.1  bibledit-gtk.1  bibledit-rdwrt.1  bibledit-shutdown.1  update-date-version
gtk/olpc/: Makefile.am  Makefile.in  activity.py  olpc-qemu
gtk/outpost/: Makefile.am  Makefile.in  README
gtk/php/: Makefile.am  Makefile.in  conflict.php  conflictcli.php  merge.php  mergecli.php  rmdir.php
gtk/pix/: Makefile.in
gtk/po/: ChangeLog  LINGUAS  POTFILES  POTFILES.in  fr.po
gtk/scripts/: Makefile.in  autotoolversions.sh  bibledit.cmd
gtk/shutdown/: Makefile.in  bibledit-shutdown.h
lib/: .csscomb.json  DEVELOP  Makefile.am  Makefile.in  aclocal.m4  bibledit  config.h  config.h.in  configure  configure.ac  dev  out.txt  reconfigure  regenerate  replace  unittest  valgrind  version.php
one/: Makefile.am  Makefile.in  bibledit-one.cpp  bibledit-one.h
onlinebible/: CSRV_TLB.dcu  CSRV_TLB.pas  ChangeLog  Makefile.am  Makefile.in  README  TODO  bibledit-onlinebible.nsi  bibledit-onlinebible.xpm  bibleditonlinebible.dpr  bibleditonlinebible.dproj  bibleditonlinebible.dproj.local  bibleditonlinebible.identcache  books.dcu  books.pas  config.guess  config.h  configure  configure.ac  main.dcu  main.dfm  main.pas  pollthread.dcu  pollthread.pas  utilities.dcu  utilities.pas
paratext/: ChangeLog  Makefile.in  README  bibleditparatext.dpr  bibleditparatext.dproj  bibleditparatext.dproj.local  bibleditparatext.identcache  bibleditparatext.nsi  bibleditparatext.xpm  books.dcu  books.pas  config.h  configure  configure.ac  main.dcu  main.dfm  main.pas  pollthread.dcu  pollthread.pas  santafefocus.dcu  santafefocus.pas  utilities.dcu
shutdown/: Makefile.am  Makefile.in  bibledit-shutdown  bibledit-shutdown.cpp  bibledit-shutdown.h
src/: .indent.pro  Makefile  Makefile.am  Makefile.in  accelerators.cpp  accelerators.h  assistantbackup.cpp  assistantbackup.h  assistantchanges.cpp  assistantchanges.h  assistantdeletekeyterms.cpp  assistantdeletekeyterms.h  assistantexport.cpp  assistantexport.h  assistantimport.cpp  assistantimport.h  assistantimportkeyterms.cpp  assistantimportkeyterms.h  assistantremoterepository.cpp  assistantremoterepository.h  assistantresource.cpp  assistantresource.h  assistantrestore.cpp  assistantrestore.h  assistants.cpp  assistants.h  backup.cpp  backup.h  bible.cpp  bible.h  bibledit-bibletime  bibledit-bibletime.cpp  bibledit-bibletime.h  bibledit-git  bibledit-git.cpp  bibledit-git.h  bibledit-help  bibledit-help.cpp  bibledit-help.h  bibledit-restart  (+670 more)
test/: Makefile.am  Makefile.in  aclocal.m4  bibledit  bibledit.desktop  config.h  configure  configure.ac  libraries.h  library.cpp  libtool  reconfigure  test.h
vacuum/: Makefile  Makefile.am  Makefile.in  bibledit-vacuum  bibledit-vacuum.cpp
web/: INSTALL  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  bibledit.session  bibledit.webprj  bumpversion.cpp  config.php  config.php.in  config.status  configure  configure.ac  index.html  index.php  project.bfproject  setup.php  stamp-h1  trimphpfiles  updatecopyright  version.php
xiphos/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  bibledit-xiphos.cpp  bibledit-xiphos.h  config.h  config.h.in  configure  configure.ac  gtkbuilder.xml
(+13385 files in other folders)
