AC_PREREQ(2.63)
AC_INIT([bibledit-bibleworks],[4.1],[http://www.nongnu.org/bibledit])
ac_default_prefix=/usr
AC_CONFIG_SRCDIR([.])
AM_INIT_AUTOMAKE([1.9 tar-ustar])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
echo "
Bibledit-BibleWorks $VERSION configuration summary:

  Version                : ${PACKAGE_VERSION}
"
